chore: Minor code cleanup